--- a/template/index.html
+++ b/template/index.html
@@ -12,24 +12,75 @@
         <ul>
             <li><a href="">Home</a></li>
             <li><a href="">About</a></li>
-            <li><a href="">Resume</a></li>
+            <li><a href="#second-section">Projects</a></li>
+            <li><a href="">Skills</a></li>
+            <li><a href="">Certificates</a></li>
+            <li><a href="">C</a></li>
         </ul>
     </nav>
     <section class="sections" id="first-section">
         <div id="image-container">
-            <img src="../assets/img/Lotlot-Face2.png" alt="Lotlot Pixel Profile" id="profile-picture">
+            <img src="../assets/img/icons/Lotlot-Face2.png" alt="Lotlot Pixel Profile" id="profile-picture">
         </div>
         <div id="text-container">
             <h1>Hallo, I am <span>Jose Carlos Navea</span></h1>
             <h2>Aspiring <span>Web Developer</span></h2>
             <div id="media-container">
-                <img src="../assets/img/Facebook-Icon-Green.png" alt="Facebook" class="media-icons" id="facebook-icon">
-                <img src="../assets/img/Tiktok-Icon-Green.png" alt="Tiktok" class="media-icons" id="tiktok-icon">
-                <img src="../assets/img/Instagram-Icon-Green.png" alt="Instagram" class="media-icons" id="instagram-icon">
-                <img src="../assets/img/Twitter-Icon-Green.png" alt="Twitter" class="media-icons" id="twitter-icon">
+                <img src="../assets/img/icons/Facebook-Icon-Green.png" alt="Facebook" class="media-icons" id="facebook-icon">
+                <img src="../assets/img/icons/Tiktok-Icon-Green.png" alt="Tiktok" class="media-icons" id="tiktok-icon">
+                <img src="../assets/img/icons/Instagram-Icon-Green.png" alt="Instagram" class="media-icons" id="instagram-icon">
+                <img src="../assets/img/icons/Twitter-Icon-Green.png" alt="Twitter" class="media-icons" id="twitter-icon">
+                <img src="../assets/img/icons/Github-Icon-Green.png" alt="Github" class="media-icons" id="github-icon">
             </div>
         </div>
     </section>
+    <section class="sections" id="second-section">
+        <h1 class="titles">About Me</h1>
+    </section>
+    <section class="sections" id="third-section">
+        <h1 class="titles">My Projects</h1>
+        <div id="projects-container">
+            <div class="projects" id="project-one">
+                <h3>Study Buddy</h3>
+                <h4>HTML, CSS, Javascript and SQL</h4>
+                <img src="" alt="Study Buddy">
+            </div>
+            <div class="projects" id="project-two">
+                <h3>Web Tool</h3>
+                <h4>HTML, CSS, Javascript</h4>
+                <img src="" alt="Web Tool">
+            </div>
+            <div class="projects" id="project-three">
+                <h3>DCMS</h3>
+                <h4>HTML, CSS, Javascript and SQL</h4>
+                <img src="" alt="DCMS">
+            </div>
+            <div class="projects" id="project-four">
+                <h3>Coffee Scape</h3>
+                <h4>HTML, CSS, Javascript and SQL</h4>
+                <img src="" alt="Coffee Scape">
+            </div>
+            <div class="projects" id="project-five">
+                <h3>Traba Hanap</h3>
+                <h4>HTML, CSS, Javascript and SQL</h4>
+                <img src="" alt="Traba Hanap">
+            </div>
+            <div class="projects" id="project-six">
+                <h3>Tito Sisig</h3>
+                <h4>Java and SQL</h4>
+                <img src="" alt="Tito Sisig">
+            </div>
+        </div>
+    </section>
+    <section class="sections" id="fourth-section">
+        <h1 class="titles">Skills</h1>
+    </section>
+    <section class="sections" id="fifth-section">
+        <h1 class="titles">Certificates</h1>
+    </section>
+    <footer>
+
+    </footer>
     <script src="js/index.js"></script>
 </body>
 </html>
