--- a/template/index.html
+++ b/template/index.html
@@ -10,12 +10,12 @@
 <body>
     <nav>
         <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="#second-section">Projects</a></li>
-            <li><a href="">Skills</a></li>
-            <li><a href="">Certificates</a></li>
-            <li><a href="">C</a></li>
+            <li><a href="#first-section">Home</a></li>
+            <li><a href="#second-section">About</a></li>
+            <li><a href="#third-section">Projects</a></li>
+            <li><a href="#fourth-section">Skills</a></li>
+            <li><a href="#fifth-section">Certificates</a></li>
+            <li><a href="#sixth-section">Contact</a></li>
         </ul>
     </nav>
     <section class="sections" id="first-section">
@@ -43,42 +43,55 @@
             <div class="projects" id="project-one">
                 <h3>Study Buddy</h3>
                 <h4>HTML, CSS, Javascript and SQL</h4>
-                <img src="" alt="Study Buddy">
+                <h5>Click Anywhere For More Details</h5>
             </div>
             <div class="projects" id="project-two">
                 <h3>Web Tool</h3>
                 <h4>HTML, CSS, Javascript</h4>
-                <img src="" alt="Web Tool">
+                <h5>Click Anywhere For More Details</h5>
             </div>
             <div class="projects" id="project-three">
                 <h3>DCMS</h3>
                 <h4>HTML, CSS, Javascript and SQL</h4>
-                <img src="" alt="DCMS">
+                <h5>Click Anywhere For More Details</h5>
             </div>
             <div class="projects" id="project-four">
                 <h3>Coffee Scape</h3>
                 <h4>HTML, CSS, Javascript and SQL</h4>
-                <img src="" alt="Coffee Scape">
+                <h5>Click Anywhere For More Details</h5>
             </div>
             <div class="projects" id="project-five">
                 <h3>Traba Hanap</h3>
                 <h4>HTML, CSS, Javascript and SQL</h4>
-                <img src="" alt="Traba Hanap">
+                <h5>Click Anywhere For More Details</h5>
             </div>
             <div class="projects" id="project-six">
                 <h3>Tito Sisig</h3>
                 <h4>Java and SQL</h4>
-                <img src="" alt="Tito Sisig">
+                <h5>Click Anywhere For More Details</h5>
             </div>
         </div>
     </section>
     <section class="sections" id="fourth-section">
         <h1 class="titles">Skills</h1>
+        <div id="button-container">
+            <img src="../assets/img/icons/HTML-Icon.png" alt="HTML" class="language-buttons" id="html" title="HTML Language">
+            <img src="../assets/img/icons/CSS-Icon.png" alt="CSS" class="language-buttons" id="css" title="CSS Language">
+            <img src="../assets/img/icons/Javascript-Icon.png" alt="Javascript" class="language-buttons" id="javascript" title="Javascript Language">
+            <img src="../assets/img/icons/PHP-Icon.png" alt="PHP" class="language-buttons" id="php" title="PHP Language">
+            <img src="../assets/img/icons/SQL-Icon.png" alt="SQL" class="language-buttons" id="sql" title="SQL Language">
+            <img src="../assets/img/icons/Java-Icon.png" alt="Java" class="language-buttons" id="java" title="Java Language">
+            <img src="../assets/img/icons/C%23-Icon.png" alt="C#" class="language-buttons" id="cSharp" title="C# Language">
+            <img src="../assets/img/icons/Python-Icon.png" alt="Python" class="language-buttons" id="python" title="Python Language">
+        </div>
+        <div id="skill-details">
+            
+        </div>
     </section>
     <section class="sections" id="fifth-section">
         <h1 class="titles">Certificates</h1>
     </section>
-    <footer>
+    <footer id="sixth-section">
 
     </footer>
     <script src="js/index.js"></script>
