--- a/template/index.html
+++ b/template/index.html
@@ -24,13 +24,13 @@
         </div>
         <div id="text-container">
             <h1>Hallo, I am <span>Jose Carlos Navea</span></h1>
-            <h2>Aspiring <span>Web Developer</span></h2>
+            <h2>Aspiring <span id="aspiring">Web Developer</span></h2>
             <div id="media-container">
-                <img src="../assets/img/icons/Facebook-Icon-Green.png" alt="Facebook" class="media-icons" id="facebook-icon">
-                <img src="../assets/img/icons/Tiktok-Icon-Green.png" alt="Tiktok" class="media-icons" id="tiktok-icon">
-                <img src="../assets/img/icons/Instagram-Icon-Green.png" alt="Instagram" class="media-icons" id="instagram-icon">
-                <img src="../assets/img/icons/Twitter-Icon-Green.png" alt="Twitter" class="media-icons" id="twitter-icon">
-                <img src="../assets/img/icons/Github-Icon-Green.png" alt="Github" class="media-icons" id="github-icon">
+                <img src="../assets/img/icons/Facebook-Icon-Green.png" alt="Facebook" class="media-icons" id="facebook-icon" title="Facebook">
+                <img src="../assets/img/icons/Tiktok-Icon-Green.png" alt="Tiktok" class="media-icons" id="tiktok-icon" title="Tiktok">
+                <img src="../assets/img/icons/Instagram-Icon-Green.png" alt="Instagram" class="media-icons" id="instagram-icon" title="Instagram">
+                <img src="../assets/img/icons/Twitter-Icon-Green.png" alt="Twitter" class="media-icons" id="twitter-icon" title="Twitter">
+                <img src="../assets/img/icons/Github-Icon-Green.png" alt="Github" class="media-icons" id="github-icon" title="Github">
             </div>
         </div>
     </section>
@@ -85,7 +85,12 @@
             <img src="../assets/img/icons/Python-Icon.png" alt="Python" class="language-buttons" id="python" title="Python Language">
         </div>
         <div id="skill-details">
-            
+            <img src="" alt="" id="skill-image">
+            <div id="details-container">
+                <h2 id="skill-language">Testing</h2>
+                <h3 id="skill-experience">Testing</h3>
+                <p id="skill-story">Testing Testing Testing Testing Testing Testing Testing Testing Testing Testing</p>
+            </div>
         </div>
     </section>
     <section class="sections" id="fifth-section">
@@ -95,5 +100,6 @@
 
     </footer>
     <script src="js/index.js"></script>
+    <script src="js/scramble.js"></script>
 </body>
 </html>
