Updated profile image

--- a/template/index.html
+++ b/template/index.html
@@ -20,7 +20,7 @@
     </nav>
     <section class="sections" id="first-section">
         <div id="image-container">
-            <img src="../assets/img/icons/Lotlot-Face2.png" alt="Lotlot Pixel Profile" id="profile-picture">
+            <img src="../assets/img/icons/Lotlot-Face.png" alt="Lotlot Pixel Profile" id="profile-picture">
         </div>
         <div id="text-container">
             <h1>Hallo, I am <span>Jose Carlos Navea</span></h1>
@@ -95,6 +95,18 @@
     </section>
     <section class="sections" id="fifth-section">
         <h1 class="titles">Certificates</h1>
+        <div class="certificate-containers">
+            <img src="../assets/certificate/Joysis Java.png" alt="Joysis Java" class="certificate-images">
+            <div class="certificate-details">
+                
+            </div>
+        </div>
+        <div class="certificate-containers">
+            <div class="certificate-details">
+                
+            </div>
+            <img src="../assets/certificate/Cisco Cybersecurity.png" alt="Cisco Cybersecurity" class="certificate-images">
+        </div>
     </section>
     <footer id="sixth-section">
 
