--- a/template/css/index.css
+++ b/template/css/index.css
@@ -87,7 +87,6 @@ nav ul li a{
 }
 h1 span{
     padding-bottom: 0.1rem;
-    border-bottom: 0.3rem solid var(--black);
 }
 #text-container h2{
     width: auto;
@@ -101,7 +100,7 @@ h1 span{
     background-color: var(--black);
 }
 #aspiring{
-    padding: 0.5rem 1rem 0.5rem 1rem;
+    padding: 0.5rem 1rem 0.5rem 0;
     border-radius: 1rem;
     color: var(--green);
 }
@@ -282,7 +281,18 @@ h1 span{
     font-size: 1.3rem;
 }
 #fifth-section{
+    margin-top: 10rem;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+.certificate-containers{
+    margin-top: 3rem;
+}
+.certificate-images{
+    height: 15rem;
+    width: 20rem;
+    border-radius: 1rem;
+    border: 0.3rem solid var(--black);
 }
