--- a/template/index.html
+++ b/template/index.html
@@ -39,38 +39,79 @@
     </section>
     <section class="sections" id="third-section">
         <h1 class="titles">My Projects</h1>
-        <div id="projects-container">
-            <div class="projects" id="project-one">
+        <div id="project-btn-grp">
+            <button class="project-btn" id="web-btn">Web</button>
+            <button class="project-btn" id="pixel-btn">Pixel Arts</button>
+            <button class="project-btn" id="app-btn">Applications</button>
+        </div>
+        <div class="projects-list" id="web-projects">
+            <div class="projects" id="project-web-one">
                 <h3>Study Buddy</h3>
                 <h4>HTML, CSS, Javascript and SQL</h4>
                 <h5>Click Anywhere For More Details</h5>
             </div>
-            <div class="projects" id="project-two">
+            <!-- <div class="projects" id="project-web-two">
                 <h3>Web Tool</h3>
                 <h4>HTML, CSS, Javascript</h4>
                 <h5>Click Anywhere For More Details</h5>
-            </div>
-            <div class="projects" id="project-three">
+            </div> -->
+            <div class="projects" id="project-web-three">
                 <h3>DCMS</h3>
                 <h4>HTML, CSS, Javascript and SQL</h4>
                 <h5>Click Anywhere For More Details</h5>
             </div>
-            <div class="projects" id="project-four">
+            <div class="projects" id="project-web-four">
                 <h3>Coffee Scape</h3>
                 <h4>HTML, CSS, Javascript and SQL</h4>
                 <h5>Click Anywhere For More Details</h5>
             </div>
-            <div class="projects" id="project-five">
+            <div class="projects" id="project-web-five">
                 <h3>Traba Hanap</h3>
                 <h4>HTML, CSS, Javascript and SQL</h4>
                 <h5>Click Anywhere For More Details</h5>
             </div>
-            <div class="projects" id="project-six">
+        </div>
+        <div class="projects-list" id="pixel-projects" style="display: none;">
+            <div class="projects" id="project-pixel-one">
+                <h3>Train Scene</h3>
+                <h4>Spirited Away Movie</h4>
+                <h5>Click Anywhere For More Details</h5>
+            </div>
+            <div class="projects" id="project-pixel-two">
+                <h3>Finn's Swords</h3>
+                <h4>Adventure Time Cartoon</h4>
+                <h5>Click Anywhere For More Details</h5>
+            </div>
+            <div class="projects" id="project-pixel-three">
+                <h3>BMO with Crying Jake</h3>
+                <h4>Adventure Time Cartoon</h4>
+                <h5>Click Anywhere For More Details</h5>
+            </div>
+            <div class="projects" id="project-pixel-four">
+                <h3>Finn</h3>
+                <h4>Adventure Time Cartoon</h4>
+                <h5>Click Anywhere For More Details</h5>
+            </div>
+            <div class="projects" id="project-pixel-five">
+                <h3>Jake</h3>
+                <h4>Adventure Time Cartoon</h4>
+                <h5>Click Anywhere For More Details</h5>
+            </div>
+            <div class="projects" id="project-pixel-six">
+                <h3>Princess Bubblegum</h3>
+                <h4>Adventure Time Cartoon</h4>
+                <h5>Click Anywhere For More Details</h5>
+            </div>
+        </div>
+        <div class="projects-list" id="app-projects" style="display: none;">
+            <div class="projects" id="project-app-one">
                 <h3>Tito Sisig</h3>
                 <h4>Java and SQL</h4>
                 <h5>Click Anywhere For More Details</h5>
             </div>
         </div>
+        <!-- <div id="projects-container">
+        </div> -->
     </section>
     <section class="sections" id="fourth-section">
         <h1 class="titles">Skills</h1>
@@ -95,17 +136,19 @@
     </section>
     <section class="sections" id="fifth-section">
         <h1 class="titles">Certificates</h1>
-        <div class="certificate-containers">
-            <img src="../assets/certificate/Joysis Java.png" alt="Joysis Java" class="certificate-images">
-            <div class="certificate-details">
-                
+        <div id="certificate-wrapper">
+            <div class="certificate-containers">
+                <img src="../assets/certificate/Joysis Java.png" alt="Joysis Java" class="certificate-images">
+                <div class="certificate-details">
+                    
+                </div>
             </div>
-        </div>
-        <div class="certificate-containers">
-            <div class="certificate-details">
-                
+            <div class="certificate-containers">
+                <div class="certificate-details">
+                    
+                </div>
+                <img src="../assets/certificate/Cisco Cybersecurity.png" alt="Cisco Cybersecurity" class="certificate-images">
             </div>
-            <img src="../assets/certificate/Cisco Cybersecurity.png" alt="Cisco Cybersecurity" class="certificate-images">
         </div>
     </section>
     <footer id="sixth-section">
