--- a/template/index.html
+++ b/template/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="icon" href="img">
+	<link rel="icon" type="image/x-icon" href="../assets/img/icons/Lotlot-Symbol.ico">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="css/index.css">
     <title>Lotlot's Porfolio</title>
@@ -72,6 +74,11 @@
             </div>
         </div>
         <div class="projects-list" id="pixel-projects" style="display: none;">
+            <div class="projects" id="project-pixel-three">
+                <h3>Low Level Dead World</h3>
+                <h4>Adventure Time Cartoon</h4>
+                <h5>Click Anywhere For More Details</h5>
+            </div>
             <div class="projects" id="project-pixel-one">
                 <h3>Train Scene</h3>
                 <h4>Spirited Away Movie</h4>
@@ -82,22 +89,27 @@
                 <h4>Adventure Time Cartoon</h4>
                 <h5>Click Anywhere For More Details</h5>
             </div>
-            <div class="projects" id="project-pixel-three">
-                <h3>BMO with Crying Jake</h3>
-                <h4>Adventure Time Cartoon</h4>
-                <h5>Click Anywhere For More Details</h5>
-            </div>
             <div class="projects" id="project-pixel-four">
-                <h3>Finn</h3>
+                <h3>Crying Jake</h3>
                 <h4>Adventure Time Cartoon</h4>
                 <h5>Click Anywhere For More Details</h5>
             </div>
             <div class="projects" id="project-pixel-five">
+                <h3>Gazer</h3>
+                <h4>Creepy</h4>
+                <h5>Click Anywhere For More Details</h5>
+            </div>
+            <div class="projects" id="project-pixel-six">
+                <h3>Finn</h3>
+                <h4>Adventure Time Cartoon</h4>
+                <h5>Click Anywhere For More Details</h5>
+            </div>
+            <div class="projects" id="project-pixel-seven">
                 <h3>Jake</h3>
                 <h4>Adventure Time Cartoon</h4>
                 <h5>Click Anywhere For More Details</h5>
             </div>
-            <div class="projects" id="project-pixel-six">
+            <div class="projects" id="project-pixel-eight">
                 <h3>Princess Bubblegum</h3>
                 <h4>Adventure Time Cartoon</h4>
                 <h5>Click Anywhere For More Details</h5>
