--- a/template/index.html
+++ b/template/index.html
@@ -90,26 +90,36 @@
                 <h5>Click Anywhere For More Details</h5>
             </div>
             <div class="projects" id="project-pixel-four">
+                <h3>Lotlot's Terraria Set</h3>
+                <h4>Terraria</h4>
+                <h5>Click Anywhere For More Details</h5>
+            </div>
+            <div class="projects" id="project-pixel-five">
                 <h3>Crying Jake</h3>
                 <h4>Adventure Time Cartoon</h4>
                 <h5>Click Anywhere For More Details</h5>
             </div>
-            <div class="projects" id="project-pixel-five">
+            <div class="projects" id="project-pixel-six">
                 <h3>Gazer</h3>
                 <h4>Creepy</h4>
                 <h5>Click Anywhere For More Details</h5>
             </div>
-            <div class="projects" id="project-pixel-six">
+            <div class="projects" id="project-pixel-seven">
+                <h3>My Homie</h3>
+                <h4>Girlfriend</h4>
+                <h5>Click Anywhere For More Details</h5>
+            </div>
+            <div class="projects" id="project-pixel-eight">
                 <h3>Finn</h3>
                 <h4>Adventure Time Cartoon</h4>
                 <h5>Click Anywhere For More Details</h5>
             </div>
-            <div class="projects" id="project-pixel-seven">
+            <div class="projects" id="project-pixel-nine">
                 <h3>Jake</h3>
                 <h4>Adventure Time Cartoon</h4>
                 <h5>Click Anywhere For More Details</h5>
             </div>
-            <div class="projects" id="project-pixel-eight">
+            <div class="projects" id="project-pixel-ten">
                 <h3>Princess Bubblegum</h3>
                 <h4>Adventure Time Cartoon</h4>
                 <h5>Click Anywhere For More Details</h5>
